--- a/resources/scss/dashboard/_navbar.scss
+++ b/resources/scss/dashboard/_navbar.scss
@@ -119,8 +119,17 @@
                         }
 
                         p {
-                            i {
-                                margin-left: 10px;
+                            display: flex;
+                            flex-direction: column;
+
+                            span {
+                                i {
+                                    margin-left: 10px;
+                                }
+                            }
+
+                            small {
+                                color: lightgray;
                             }
                         }
                     }
