--- a/resources/scss/components/_why-us.scss
+++ b/resources/scss/components/_why-us.scss
@@ -11,14 +11,11 @@
         display: flex;
         justify-content: space-between;
         gap: 2 * $gap;
+        align-items: center;
 
         @include mobile-only {
             flex-direction: column;
             gap: 20px 0;
-        }
-
-        @include tablet {
-            flex-direction: column-reverse;
         }
 
         &-image {
@@ -32,7 +29,7 @@
 
         &-text {
 
-            flex: 1;
+            flex: 2;
 
             @include tablet {
                 margin-bottom: 40px;
