--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -82,6 +82,7 @@ body {
         justify-content: space-between;
         gap: 3 * $gap;
         padding: 8 * $gap 1.5 * $gap !important;
+        align-items: center;
 
         @include mobile-only {
             flex-direction: column;
@@ -97,7 +98,7 @@ body {
         }
 
         &-text {
-            flex: 1;
+            flex: 2;
 
             p {
                 text-align: justify;
