--- a/resources/scss/dashboard/_payment.scss
+++ b/resources/scss/dashboard/_payment.scss
@@ -71,3 +71,10 @@ $bc: #f1f1f1;
         flex: 1.5;
     }
 }
+
+.aproving {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
