--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1750,6 +1750,13 @@ div.table-responsive > div.dataTables_wrapper > div.row > div[class^=col-]:last-
   flex: 1.5;
 }
 
+.aproving {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 .hidden {
   display: none !important;
 }
@@ -1767,4 +1774,24 @@ div.table-responsive > div.dataTables_wrapper > div.row > div[class^=col-]:last-
   .hide-on-mobile {
     display: none;
   }
+}
+.btn-formulaja {
+  background-color: #fbcf3d;
+  padding: 0 22.5px;
+  height: 40px;
+  display: flex;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  border-radius: 100px;
+  border: 2px solid #fbcf3d;
+  transition: all ease 0.2s;
+  cursor: pointer;
+}
+.btn-formulaja:hover {
+  background-color: transparent;
+  color: #fbcf3d;
 }
