--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -310,6 +310,7 @@ body {
 @import "./components/auth";
 @import "./components/recipt";
 @import "./components/duvidas";
+@import "./components/faq";
 
 .hidden {
     display: none !important;
