--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2893,6 +2893,110 @@ body.is-pet .enviar-buttons.submit:hover {
   margin-left: -100%;
   height: 1px;
 }
+.faq-breadcrumb {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  background-color: #f7f7fc;
+  height: 40px;
+  border-radius: 100px;
+  align-items: center;
+  padding: 0 20px;
+}
+.faq-breadcrumb-item {
+  display: flex;
+  gap: 10px;
+  height: 100%;
+  align-items: center;
+  font-size: 0.9em;
+}
+.faq-breadcrumb-item a {
+  color: #fbcf3d;
+  text-decoration: underline;
+}
+.faq-breadcrumb-item:not(:last-child)::after {
+  content: ">";
+  align-self: center;
+  color: #5e5f5f;
+  opacity: 0.4;
+}
+.faq-breadcrumb-item:last-child {
+  color: #5e5f5f;
+  font-weight: 500;
+}
+.faq-collapsible {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  color: #5e5f5f;
+}
+.faq-collapsible-item {
+  width: 100%;
+}
+.faq-collapsible-item .question, .faq-collapsible-item .answer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  border: 1px solid #fbcf3d;
+}
+.faq-collapsible-item .question {
+  height: 50px;
+  background-color: #fbcf3d;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.faq-collapsible-item .answer {
+  display: none;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.faq-collapsible-item.open .question {
+  border-bottom: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.faq-collapsible-item.open .answer {
+  border-top: 0;
+  display: flex;
+}
+.faq-end {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  color: #5e5f5f;
+  margin-top: 40px;
+  gap: 5px;
+}
+.faq-end p {
+  margin: 0;
+  font-size: 1.2em;
+  font-weight: 500;
+}
+.faq-end a {
+  background-color: #fbcf3d;
+  padding: 0 22.5px;
+  height: 40px;
+  display: flex;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  border-radius: 100px;
+  border: 2px solid #fbcf3d;
+  transition: all ease 0.2s;
+  cursor: pointer;
+}
+.faq-end a:hover {
+  background-color: transparent;
+  color: #fbcf3d;
+}
 
 .hidden {
   display: none !important;
