--- a/resources/scss/components/_faq.scss
+++ b/resources/scss/components/_faq.scss
@@ -37,4 +37,105 @@
         margin-left: -100%;
         height: 1px;
     }
+
+    &-breadcrumb {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        gap: 10px;
+        width: 100%;
+        background-color: $bg;
+        height: 40px;
+        border-radius: 100px;
+        align-items: center;
+        padding: 0 20px;
+
+        &-item {
+            display: flex;
+            gap: 10px;
+            height: 100%;
+            align-items: center;
+            font-size: 0.9em;
+            a {
+                color: $primary;
+                text-decoration: underline;
+            }
+            &:not(:last-child) {
+                &::after {
+                    content: ">";
+                    align-self: center;
+                    color: $text;
+                    opacity: 0.4;
+                }
+            }
+            &:last-child {
+                color: $text;
+                font-weight: 500;
+            }
+        }
+    }
+
+    &-collapsible {
+        display: flex;
+        flex-direction: column;
+        gap: $gap;
+        color: $text;
+        &-item {
+            width: 100%;
+
+            .question, .answer {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                padding: 0 20px;
+                border: 1px solid $primary;
+            }
+
+            .question {
+                height: 50px;
+                background-color: $primary;
+                border-radius: 10px;
+                cursor: pointer;
+            }
+
+            .answer {
+                display: none;
+                border-bottom-left-radius: 10px;
+                border-bottom-right-radius: 10px;
+            }
+
+            &.open {
+                .question {
+                    border-bottom: 0;
+                    border-bottom-left-radius: 0;
+                    border-bottom-right-radius: 0;
+                }
+
+                .answer {
+                    border-top: 0;
+                    display: flex;
+                }
+            }
+        }
+    }
+
+    &-end {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        color: $text;
+        margin-top: 40px;
+        gap: 5px;
+
+        p {
+            margin: 0;
+            font-size: 1.2em;
+            font-weight: 500;
+        }
+        a {
+            @include button($primary, white);
+        }
+    }
 }
