--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -385,6 +385,48 @@ main {
     display: none;
   }
 }
+.main-help {
+  margin-top: 15px;
+  background: white;
+  padding: 15px;
+  border-radius: 3px;
+  box-shadow: 0 0 10px -2px lightgray;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.main-help-header p {
+  font-size: 1.2em;
+  font-weight: 500;
+}
+.main-help-channels {
+  display: flex;
+  gap: 15px;
+}
+.main-help-channels-item {
+  background-color: #5e5f5f;
+  padding: 0 22.5px;
+  height: 40px;
+  display: flex;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  border-radius: 100px;
+  border: 2px solid #5e5f5f;
+  transition: all ease 0.2s;
+  cursor: pointer;
+  gap: 10px;
+}
+.main-help-channels-item:hover {
+  background-color: transparent;
+  color: #5e5f5f;
+}
+.main-help-channels-item:hover {
+  text-decoration: none;
+}
 
 @media (min-width: 600px) and (max-width: 1199px) {
   .profile {
