--- a/resources/scss/components/_blog.scss
+++ b/resources/scss/components/_blog.scss
@@ -264,7 +264,7 @@
                         max-width: 100%;
 
                         img {
-                            max-width: 100%;
+                            width: 100%;
                         }
                     }
 
